--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	      <h1>My Subjects</h1>
 		  <table>
 			      <tr>
-				     <th>Header 1</th>
-				     <th>Header 2</th>
+				     <th rowspan="2" style = "border: 1px solid black; padding: 50px 10px;">Subject</th>
+				     <th colspan="2" style = "border: 1px solid black; padding: 50px 10px;">Thoughts</th>
 			      </tr>
 		   </table>
 	 </body>
