--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	 </head>
 	 <body>
 	      <h1>My Subjects</h1>
-		  <table>
+		  <table style = "border: 1px solid black; border-spacing: 10px; bordeer-collapse: separate; background-color: #E03FD8; width: 400px; height: 400px;">
 			      <tr>
 				     <th rowspan="2" style = "border: 1px solid black; padding: 50px 10px;">Subject</th>
 				     <th colspan="2" style = "border: 1px solid black; padding: 50px 10px;">Thoughts</th>
